[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_rag.metadata]
type = "agent"

[project]
name = "sam_rag"
dynamic = ["version"]
authors = [
  { name="SolaceLabs", email="solacelabs@solace.com" },
]
description = "A document-ingesting agent that monitors specified directories, keeping stored documents up to date in a vector database for Retrieval-Augmented Generation (RAG) queries."
readme = "README.md"
license = { text = "Apache License 2.0" }
requires-python = ">=3.10.16,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pdfplumber>=0.11.7,<1",  # For high-quality PDF processing (MIT License)
    "pypdf>=6.9.1,<7",  # For PDF processing fallback (BSD License)
    "python-docx==1.2.0",  # For DOCX processing
    "beautifulsoup4==4.13.5",  # For HTML processing
    "pandas==2.3.2",  # For Excel processing
    "odfpy==1.4.1",  # For ODT processing
    "lxml==6.0.1",  # XML parser for BeautifulSoup
    "PyYAML==6.0.2",  # For YAML processing
    "openai==1.99.9",  # For OpenAI API access
    "qdrant-client==1.13.3",  # For Qdrant vector database access
    "watchdog==6.0.0",  # Fixed syntax for watchdog dependency
    "scikit-learn==1.7.2",  # For TF-IDF and other machine learning utilities
    "nltk>=3.9.4,<4",
]

[project.optional-dependencies]
nlp = [
    "nltk>=3.7",  # For more advanced text processing
    "spacy>=3.4.0",  # For advanced NLP preprocessing
    "langdetect>=1.0.9",  # For language detection
]

pinecone = [
    "pinecone>=6.0.0",  # For Pinecone vector database access
]

cloud_storage = [
    "google-api-python-client>=2.100.0",  # For Google Drive API
    "google-auth-httplib2>=0.1.1",  # For Google API authentication
    "google-auth-oauthlib>=1.0.0",  # For Google OAuth2 flow
    "requests>=2.31.0",  # For HTTP requests
    "boto3>=1.28.0",  # For AWS S3 integration
]

onedrive = [
    "msal>=1.24.0",  # Microsoft Authentication Library
    "requests>=2.31.0",  # For HTTP requests to Microsoft Graph API
]

[project.urls]
Homepage = "https://github.com/SolaceLabs/solace-agent-mesh"
Documentation = "https://solacelabs.github.io/solace-agent-mesh/"
Repository = "https://github.com/SolaceLabs/solace-agent-mesh-core-plugins"
Issues = "https://github.com/SolaceLabs/solace-agent-mesh-core-plugins/issues"

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "sam_rag/config.yaml"
"README.md" = "sam_rag/README.md"
"pyproject.toml" = "sam_rag/pyproject.toml"

[tool.hatch.build.targets.wheel]
packages = ["src/sam_rag"]
src-path = "src"

[tool.hatch.version]
path = "src/sam_rag/__init__.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=short --strict-markers --disable-warnings -p pytest_asyncio"
markers = []

[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest-asyncio",
  "pytest>=8.0.0",
  "pytest-mock>=3.0.0",
  "pytest-cov>=4.0.0",
  "pytest-json-ctrf>=0.1.0",
  "pytest-xdist>=3.5.0",
  "sam-test-infrastructure @ git+https://github.com/SolaceLabs/solace-agent-mesh#subdirectory=tests/sam-test-infrastructure"
]
