[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_rest_gateway.metadata]
type = "gateway"

[project]
name = "sam_rest_gateway"
version = "0.1.0"
authors = [
  { name="SolaceLabs", email="solacelabs@solace.com" },
]
description = "The Solace Agent Mesh (SAM) REST API Gateway provides a standard, robust, and secure HTTP-based entry point for programmatic and system-to-system integrations. It allows external clients to submit tasks to SAM agents, manage files, and discover agent capabilities using a familiar RESTful interface."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "solace_agent_mesh~=1.0.0",
    # Add plugin-specific dependencies here
]

[tool.hatch.build.targets.wheel]
packages = ["src/sam_rest_gateway"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/sam_rest_gateway" = "sam_rest_gateway/"
"config.yaml" = "sam_rest_gateway/config.yaml"
"README.md" = "sam_rest_gateway/README.md"
"pyproject.toml" = "sam_rest_gateway/pyproject.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=short --strict-markers --disable-warnings -p pytest_asyncio"
markers = [
  "rest_gateway: marks tests as rest_gateway tests",
  "general: marks tests as general tests",
  "v1: marks tests as v1 tests",
  "v2: marks tests as v2 tests",
  "security: marks tests as security tests",
  "auth: marks tests as auth tests",
  "input_validation: marks tests as input_validation tests",
]

[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest-asyncio",
  "pytest>=8.0.0",
  "pytest-mock>=3.0.0",
  "pytest-cov>=4.0.0",
  "pytest-xdist>=3.5.0",
  "sam-test-infrastructure @ git+https://github.com/SolaceLabs/solace-agent-mesh#subdirectory=tests/sam-test-infrastructure"
]
