[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_ruleset_lookup_tool.metadata]
type = "tool"

[project]
name = "sam_ruleset_lookup_tool"
version = "0.1.0"
authors = [
  { name="SolaceLabs", email="solacelabs@solace.com" },
]
description = "a configuration-driven tool that provides text-based rulesets to LLM agents for reasoning."
readme = "README.md"
license = { text = "Apache License 2.0" }
requires-python = ">=3.10.16,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-json-ctrf>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/SolaceLabs/solace-agent-mesh"
Documentation = "https://solacelabs.github.io/solace-agent-mesh/"
Repository = "https://github.com/SolaceLabs/solace-agent-mesh-core-plugins"
Issues = "https://github.com/SolaceLabs/solace-agent-mesh-core-plugins/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sam_ruleset_lookup_tool"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "sam_ruleset_lookup_tool/config.yaml"
"README.md" = "sam_ruleset_lookup_tool/README.md"
"pyproject.toml" = "sam_ruleset_lookup_tool/pyproject.toml"


[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
  "pytest-json-ctrf>=0.1.0",
]
