[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_slack.metadata]
type = "gateway"

[project]
name = "sam_slack"
version = "0.1.0"
authors = [
  { name="SolaceLabs", email="solacelabs@solace.com" },
]
description = "Solace-agent-mesh gateway interface for Slack"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "slack_bolt>=1.18.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sam_slack"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/sam_slack" = "sam_slack/"
"config.yaml" = "sam_slack/config.yaml"
"README.md" = "sam_slack/README.md"
"pyproject.toml" = "sam_slack/pyproject.toml"
