[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_sql_database_tool.metadata]
type = "tool"

[project]
name = "sam_sql_database_tool"
version = "0.3.3"
description = "A reusable SQL database tool for Solace Agent Mesh."
readme = "README.md"
authors = [
  { name="SolaceLabs", email="solacelabs@solace.com" },
]
license = { text = "Apache License 2.0" }
requires-python = ">=3.10.16,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "SQLAlchemy==2.0.40",
  "PyMySQL==1.1.2",
  "psycopg2-binary==2.9.10",
  "pyodbc==5.3.0",
  "oracledb==3.4.1",
  "pydantic==2.11.9",
  "PyYAML==6.0.2"
]

[project.urls]
Homepage = "https://github.com/SolaceLabs/solace-agent-mesh"
Documentation = "https://solacelabs.github.io/solace-agent-mesh/"
Repository = "https://github.com/SolaceLabs/solace-agent-mesh-core-plugins"
Issues = "https://github.com/SolaceLabs/solace-agent-mesh-core-plugins/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sam_sql_database_tool"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "sam_sql_database_tool/config.yaml"
"README.md" = "sam_sql_database_tool/README.md"
"pyproject.toml" = "sam_sql_database_tool/pyproject.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=short --strict-markers --disable-warnings -p pytest_asyncio"

[tool.hatch.envs.hatch-test]
dependencies = [
  "a2a-sdk[http-server]>=0.3.1",
  "pytest-asyncio",
  "pytest>=8.0.0",
  "pytest-mock>=3.0.0",
  "pytest-cov>=4.0.0",
  "pytest-json-ctrf>=0.1.0",
  "pytest-xdist>=3.5.0",
  "solace-agent-mesh>=1.4.9,<2.0.0",
  "testing.postgresql",
  "psycopg2-binary",
  "testcontainers[mysql,postgres,mssql,oracle]>=4.4.0",
  "sam-test-infrastructure @ git+https://github.com/SolaceLabs/solace-agent-mesh#subdirectory=tests/sam-test-infrastructure",

]
