[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.sam_webhook_gateway.metadata]
type = "gateway"

[project]
name = "sam_webhook_gateway"
version = "0.1.0"
authors = [
  { name="SolaceLabs", email="solacelabs@solace.com" },
]
description = "a Universal Webhook Gateway for the Solace Agent Mesh that allows external systems to trigger A2A (Agent-to-Agent) tasks via HTTP webhooks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "solace_agent_mesh~=1.0.0",
    # Add plugin-specific dependencies here
]

[tool.hatch.build.targets.wheel]
packages = ["src/sam_webhook_gateway"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/sam_webhook_gateway" = "sam_webhook_gateway/"
"config.yaml" = "sam_webhook_gateway/config.yaml"
"README.md" = "sam_webhook_gateway/README.md"
"pyproject.toml" = "sam_webhook_gateway/pyproject.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=short --strict-markers --disable-warnings -p pytest_asyncio"
markers = []

[tool.hatch.envs.hatch-test]
dependencies = [
  "pytest-asyncio",
  "pytest>=8.0.0",
  "pytest-mock>=3.0.0",
  "pytest-cov>=4.0.0",
  "pytest-xdist>=3.5.0",
  "sam-test-infrastructure @ git+https://github.com/SolaceLabs/solace-agent-mesh#subdirectory=tests/sam-test-infrastructure"
]